--- a/deploymet.yml
+++ b/deploymet.yml
@@ -15,7 +15,7 @@ spec:
         app: myapp
     spec:
       containers:
-      - image: httpd:2
+      - image: httpd
         name: myapp
         ports:
         - containerPort: 80
